--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -210,8 +210,8 @@ msgstr "Chercheur principal"
 msgid "Not Specified"
 msgstr "Non précisé"
 
-msgid "CIOOS Data Catalogue"
-msgstr "Catalogue de données du SIOOC"
+msgid "<span>CIOOS</span> Data Catalogue"
+msgstr "Catalogue de données du <span>SIOOC</span>"
 
 msgid "CIOOS"
 msgstr "SIOOC"
