--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -471,7 +471,7 @@ msgid "View Harvested Metadata"
 msgstr "Voir les métadonnées moissonnées"
 
 msgid "Access full metadata"
-msgstr "Accédez au métadonnées complètes"
+msgstr "Accédez aux métadonnées complètes"
 
 msgid "here"
 msgstr "ici"
