--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -562,3 +562,12 @@ msgstr "Ex. température"
 #: ckan/templates/user/read_base.html:20
 msgid "Activity Stream"
 msgstr "Flux d'Activités"
+
+msgid "Custodian"
+msgstr "Dépositaire"
+
+msgid "Name"
+msgstr "Nom"
+
+msgid "Email"
+msgstr "Courriel"
