update eovs icons

--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -670,3 +670,6 @@ msgstr "Courants sous-marins"
 
 msgid "Ocean surface heat flux"
 msgstr "Flux de chaleur océanique de surface"
+
+msgid "English"
+msgstr "Anglais"
