fix ocean colour

--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -677,7 +677,7 @@ msgstr "Anglais"
 msgid "Marine debris"
 msgstr "Débris marins"
 
-msgid "Ocean color"
+msgid "Ocean colour"
 msgstr "Couleur des océans"
 
 msgid "Ocean sound"
