--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -685,3 +685,12 @@ msgstr "Paysage acoustique des océans"
 
 msgid "Cross-disciplinary"
 msgstr "Interdisciplinaire"
+
+msgid "Year"
+msgstr "Année"
+
+msgid "Year"
+msgstr "Année"
+
+msgid "Show blank range"
+msgstr "Afficher étendue vide"
