--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -689,8 +689,8 @@ msgstr "Interdisciplinaire"
 msgid "Year"
 msgstr "Année"
 
-msgid "Year"
-msgstr "Année"
+msgid " to "
+msgstr " à "
 
 msgid "Show blank range"
 msgstr "Afficher étendue vide"
