--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -464,6 +464,9 @@ msgstr "contributeurs"
 msgid "Show Permalink"
 msgstr "Montrer le Permalien"
 
+msgid "Basic View "
+msgstr "Vue de Base"
+
 msgid "Metadata Reference Date(s)"
 msgstr "Date(s) de référence des métadonnées"
 
@@ -694,3 +697,9 @@ msgstr " à "
 
 msgid "Show blank range"
 msgstr "Afficher étendue vide"
+
+msgid "read more"
+msgstr "lire plus"
+
+msgid "read less"
+msgstr "lire moins"
