--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -326,6 +326,9 @@ msgstr "Variables océaniques"
 msgid "SEARCH BY OCEAN VARIABLE"
 msgstr "RECHERCHE PAR VARIABLE OCÉANIQUE"
 
+msgid "Search By Ocean Variable:"
+msgstr "Recherche par variable océanique"
+
 msgid "Search"
 msgstr "Chercher"
 
