fix Stable Carbon Isotope

--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -636,7 +636,7 @@ msgid "Nitrous oxide"
 msgstr "Protoxyde d'azote"
 
 msgid "Stable carbon isotopes"
-msgstr "Carbone organique dissous"
+msgstr "Isotopes stables du carbone"
 
 msgid "BioEcosystems"
 msgstr "Biologie et écosystèmes"
