fix translations for varius fields and add dataset extents to spatial map

--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -706,3 +706,9 @@ msgstr "lire plus"
 
 msgid "read less"
 msgstr "lire moins"
+
+msgid "External Organization Page"
+msgstr "Page Organisation Externe"
+
+msgid "Licenses"
+msgstr "Licences"
