add more translations

--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -712,3 +712,12 @@ msgstr "Page Organisation Externe"
 
 msgid "Licenses"
 msgstr "Licences"
+
+msgid "Keywords"
+msgstr "Mots clés"
+
+msgid "Data Reference Date(s)"
+msgstr "Date(s) de référence des données"
+
+msgid "Basic View"
+msgstr "Vue de base"
