add more translations

--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -721,3 +721,9 @@ msgstr "Date(s) de référence des données"
 
 msgid "Basic View"
 msgstr "Vue de base"
+
+msgid "Limitations"
+msgdtr "Limites"
+
+msgid "Access"
+msgstr "Accès"
