fix typo in translation file

--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -723,7 +723,7 @@ msgid "Basic View"
 msgstr "Vue de base"
 
 msgid "Limitations"
-msgdtr "Limites"
+msgstr "Limites"
 
 msgid "Access"
 msgstr "Accès"
