--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -727,3 +727,29 @@ msgstr "Limites"
 
 msgid "Access"
 msgstr "Accès"
+
+msgid "What are Responsible Organization?"
+msgstr "Que sont les Organisation Responsable?"
+
+msgid "Search responsible organization..."
+msgstr "Rechercher des organisation responsables..."
+
+#:
+#, python-format
+msgid "%(count)d responsible organizations found"
+msgstr "%(count)d organisations responsables trouvées"
+
+#: ckan/templates/snippets/search_result_text.html:21
+msgid "{number} responsible organization found for \"{query}\""
+msgid_plural "{number} responsible organizations found for \"{query}\""
+msgstr[0] "{number} groupe  trouvé pour \"{query}\""
+msgstr[1] "{number} groupes  trouvés pour \"{query}\""
+msgstr[2] "{number} groupes  trouvés pour \"{query}\""
+
+#: ckan/templates/snippets/search_result_text.html:23
+msgid "{number} responsible organization found"
+msgid_plural "{number} responsible organizations found"
+msgstr[0] "{number} groupe  trouvé"
+msgstr[1] "{number} groupes trouvés"
+msgstr[2] "{number} groupes trouvés"
+
