--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -744,12 +744,21 @@ msgid "{number} responsible organization found for \"{query}\""
 msgid_plural "{number} responsible organizations found for \"{query}\""
 msgstr[0] "{number} groupe  trouvé pour \"{query}\""
 msgstr[1] "{number} groupes  trouvés pour \"{query}\""
-msgstr[2] "{number} groupes  trouvés pour \"{query}\""
 
 #: ckan/templates/snippets/search_result_text.html:23
 msgid "{number} responsible organization found"
 msgid_plural "{number} responsible organizations found"
 msgstr[0] "{number} groupe  trouvé"
 msgstr[1] "{number} groupes trouvés"
-msgstr[2] "{number} groupes trouvés"
 
+#: ckanext-cioos_theme/ckanext/cioos_theme/templates/package/snippets/metadata_quality.html:4
+msgid "Made available by"
+msgstr "Mis à disposition par"
+
+#: ckanext-cioos_theme/ckanext/cioos_theme/templates/package/snippets/metadata_quality.html:7
+msgid "These resources are not under the control of CIOOS and the link is provided solely for the convenience of our website visitors. We are not responsible for the accuracy, currency or reliability of the content of this website. CIOOS does not offer any guarantee in that regard and is not responsible for the information found through this link."
+msgstr "Ces ressources ne sont pas sous le contrôle de SIOOC et le lien est fourni uniquement pour la commodité des visiteurs de notre site Web. Nous ne sommes pas responsables de l'exactitude, de l'actualité ou de la fiabilité du contenu de ce site Web. SIOOC n'offre aucune garantie à cet égard et n'est pas responsable des informations trouvées via ce lien."
+
+#: ckanext-cioos_theme/ckanext/cioos_theme/templates/package/snippets/metadata_quality.html:14
+msgid "Visitors should also be aware that the information offered may be available only in the language used by the site. With respect to privacy, visitors should research the privacy policies of this external website before providing personal information."
+msgstr "Les visiteurs doivent également être conscients que les informations proposées peuvent être disponibles uniquement dans la langue utilisée par le site. En ce qui concerne la confidentialité, les visiteurs doivent rechercher les politiques de confidentialité de ce site Web externe avant de fournir des informations personnelles."
