Add French translations for "Harvested From" and "Resource Type"

--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -286,8 +286,11 @@ msgid "View Full Metadata"
 msgstr "Afficher les métadonnées complètes"
 
 #: ckanext/cioos_theme/templates/package/snippets/metadata_source.html:2
-msgid "Harvested from"
-msgstr "Récolté à partir de"
+msgid "Harvested From"
+msgstr "Récolté de"
+
+msgid "Resource Type"
+msgstr "Type de ressource"
 
 #: ckanext/cioos_theme/templates/package/snippets/metadata_source.html:2
 msgid "Other records from"
@@ -484,9 +487,6 @@ msgstr "Accédez aux métadonnées complètes"
 
 msgid "here"
 msgstr "ici"
-
-msgid "Harvested from"
-msgstr "Récolté à partir de"
 
 msgid "Other records harvested from"
 msgstr "Autres documents récoltés à partir de"
