Add French translations for "Projects", "Metadata Harvested From", and "Climate Variables"

--- a/ckanext/cioos_theme/i18n/ckanext-cioos_theme.pot
+++ b/ckanext/cioos_theme/i18n/ckanext-cioos_theme.pot
@@ -226,3 +226,12 @@ msgstr ""
 
 msgid "Resource Type"
 msgstr ""
+
+msgid "Projects"
+msgstr ""
+
+msgid "Metadata Harvested From"
+msgstr ""
+
+msgid "Climate Variables"
+msgstr ""
