Add French translations for "Lineage" and "Responsible Organizations"

--- a/ckanext/cioos_theme/i18n/ckanext-cioos_theme.pot
+++ b/ckanext/cioos_theme/i18n/ckanext-cioos_theme.pot
@@ -235,3 +235,10 @@ msgstr ""
 
 msgid "Climate Variables"
 msgstr ""
+
+
+msgid "Lineage"
+msgstr ""
+
+msgid "Responsible Organizations"
+msgstr ""
