Add French translations for "Related Works" in .pot and .po files

--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -777,3 +777,6 @@ msgstr "Généalogie"
 
 msgid "Responsible Organizations"
 msgstr "Organisations responsables"
+
+msgid "Related Works"
+msgstr "Travaux connexes"
