Add French translation for "Download Citation" and ensure existing translations are intact

--- a/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
+++ b/ckanext/cioos_theme/i18n/fr/LC_MESSAGES/ckanext-cioos_theme.po
@@ -780,3 +780,6 @@ msgstr "Organisations responsables"
 
 msgid "Related Works"
 msgstr "Travaux connexes"
+
+msgid "Download Citation"
+msgstr "Télécharger la citation"
