Add French translation for "Download Citation" in translation template

--- a/ckanext/cioos_theme/i18n/ckanext-cioos_theme.pot
+++ b/ckanext/cioos_theme/i18n/ckanext-cioos_theme.pot
@@ -216,3 +216,7 @@ msgstr ""
 #: ckanext/cioos_theme/templates/package/snippets/metadata_source.html:2
 msgid "Metadata Source"
 msgstr ""
+
+
+msgid "Download Citation"
+msgstr ""
